feat: 머지 전 커밋

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <div></div>
+    <div>안녕하세요</div>
+    <h1>연습</h1>
     <p></p>
   </body>
 </html>
