feat: 기본 페이지 스켈레톤 코드 작성

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>메인</title>
+    <title>게시글 상세보기</title>
 </head>
 <body>
-    <h1>메인페이지</h1>
+    <h1>게시글 상세보기 페이지</h1>
 </body>
 </html>
