--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>메인</title>
+    <title>회원가입</title>
 </head>
 <body>
-    <h1>메인페이지</h1>
+    <h1>회원가입 페이지</h1>
 </body>
 </html>
