--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
-    <title>로그인</title>
-</head>
-<body>
-    <h1>로그인 페이지</h1>
-</body>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="reset.css" />
+  </head>
+  <body>
+    <img src="/" alt="투어룩 로고" />
+
+    <h2>Login</h2>
+    <form action="#">
+      <div>
+        <label for="user_id">ID: </label>
+        <input type="text" id="user_id" />
+      </div>
+      <div>
+        <label for="user_pwd">Password</label>
+        <input type="password" id="user_pwd" />
+      </div>
+    </form>
+    <p>회원가입을 하지 않으셨다면 ?</p>
+    <a href="#">회원가입</a>
+  </body>
 </html>
