Feat: 게시글 작성페이지 html 기본구성

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>게시글 상세보기</title>
+    <link rel="stylesheet" href="../static/reset.css" />
   </head>
   <body>
     <h1>게시글 상세보기 페이지</h1>
     <div class="detail-container">
       <h2 class="detail-title"></h2>
+      <p class="detail-local">#서울/경기</p>
       <p class="detail-user"></p>
       <p class="detail-main"></p>
     </div>
