--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <header>
+      <div>
+        {%if session['user_id']%}
+          {{session['user_id']}} 님, 환영합니다.
+        {%endif%}
+      </div>
+      
       <h1>
         <img src="/" alt="투어룩 로고" />
       </h1>
@@ -15,6 +21,8 @@
       <a href="#">회원가입</a>
     </header>
     <main>
+      
+      
       <!-- 검색창 대신 radio 버튼으로 원하는 곳 구현 -->
       <form action="#">
         <label for="lang">Language</label>
