--- a/templates/post_save.html
+++ b/templates/post_save.html
@@ -7,27 +7,32 @@
   </head>
   <body>
     <div class="save-container">
-      <form action="#">
+      <form action="/post" method="post">
         <div class="save-location">
           <label for="save-location">여행 도시</label>
-          <select name="save-location" id="save-location">
-            <option value="">전체</option>
-            <option value="">경기 / 서울</option>
-            <option value="">1</option>
-            <option value="">2</option>
-            <option value="">3</option>
-            <option value="">4</option>
-            <option value="">5</option>
-            <option value="">6</option>
+          <select name="post_local_cate" id="save-location">
+            <option value="전체">전체</option>
+            <option value="서울">서울</option>
+            <option value="경기도">경기도</option>
+            <option value="인천">인천</option>
+            <option value="강원도">강원도</option>
+            <option value="충청북도">충청북도</option>
+            <option value="충청남도">충청남도</option>
+            <option value="전라북도">전라북도</option>
+            <option value="전라남도">전라남도</option>
+            <option value="경상북도">경상북도</option>
+            <option value="경상남도">경상남도</option>
+            <option value="제주도">제주도</option>
+            <option value="울릉도/독도">울릉도/독도</option>
           </select>
         </div>
         <div class="save-title">
           <label for="save-title">제목</label>
-          <textarea name="save-title" id="save-title" cols="100" rows="2"></textarea>
+          <textarea name="post_title" id="save-title" cols="100" rows="2"></textarea>
         </div>
         <div class="save-main">
-          <label for="save-main">제목</label>
-          <textarea name="save-main" id="save-main" cols="100" rows="20"></textarea>
+          <label for="save-main">내용</label>
+          <textarea name="post_content" id="save-main" cols="100" rows="20"></textarea>
         </div>
         <button type="submit">글 등록</button>
       </form>
