연습용 커밋 ㅇㅇㅇㅇㅇㅇㅇ

--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,7 @@
           <option value="">4</option>
           <option value="">5</option>
           <option value="">6</option>
+          <p>이제 안무서워요 ㅎㅎ</p>
         </select>
         <input type="submit" value="Submit" />
       </form>
