--- a/templates/login.html
+++ b/templates/login.html
@@ -22,6 +22,6 @@
       <button type="submit">로그인</button>
     </form>
     <p>회원가입을 하지 않으셨다면 ?</p>
-    <a href="#">회원가입</a>
+    <a href="#">회원가입 빨리해</a>
   </body>
 </html>
