--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -11,7 +11,7 @@
     <div class="detail-container">
       <h2 class="detail-title"></h2>
       <p class="detail-local">#서울/경기</p>
-      <p class="detail-user"></p>
+      <p class="detail-user">김선하</p>
       <p class="detail-main"></p>
     </div>
     <form action="#">
