--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,7 @@
           <option value="">5</option>
           <option value="">6</option>
           <p>이제 안무서워요 ㅎㅎ</p>
+          <span>이게뭐야</span>
         </select>
         <input type="submit" value="Submit" />
       </form>
