feat: 로그아웃 구현

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
       <div>
         {%if session['user_id']%}
           {{session['user_id']}} 님, 환영합니다.
+          <a href="/logout">로그아웃</a>
         {%endif%}
       </div>
       
