--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,6 @@
       <div>
         {%if session['user_id']%}
           {{session['user_id']}} 님, 환영합니다.
-          <a href="/logout">로그아웃</a>
         {%endif%}
       </div>
       
@@ -36,6 +35,8 @@
           <option value="">4</option>
           <option value="">5</option>
           <option value="">6</option>
+          <p>이제 안무서워요 ㅎㅎ</p>
+          <span>이게뭐야</span>
         </select>
         <input type="submit" value="Submit" />
       </form>
