Feat: 회원가입 페이지 url입력 제외 완성

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="../static/reset.css" />
   </head>
   <body>
     <img src="/" alt="투어룩 로고" />
-
     <h2>Login</h2>
     <form action="/login" method="POST">
       <div>
