--- a/static/signup.css
+++ b/static/signup.css
@@ -65,6 +65,7 @@
   font-size: 24px;
 }
 .main-container .login {
+  display: block;
   width: 600px;
   height: 50px;
   border-radius: 10px;
@@ -72,4 +73,7 @@
   color: #fff;
   border: none;
   font-size: 24px;
+  margin-top: 30px;
+  text-align: center;
+  line-height: 50px;
 }
