--- a/templates/signup.html
+++ b/templates/signup.html
@@ -42,6 +42,7 @@
         </div>
         <button type="submit">회원가입</button>
       </form>
+      <a href="/login" class="login">이미 회원이시라면 ?!</a>
     </div>
   </body>
 </html>
