--- a/static/login.css
+++ b/static/login.css
@@ -14,7 +14,7 @@ body {
     width: 800px;
     height: 800px;
     margin: 0 auto;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     padding-top: 150px;
 }
 .row {
