--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,39 +10,41 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="flex-box">
-        <img src="/static/tourlook_logo.svg" alt="투어룩 로고" />
-        <h2>회원가입</h2>
+      <div class="flex-container">
+        <div class="flex-box">
+          <img src="/static/tourlook_logo.svg" alt="투어룩 로고" />
+          <h2>회원가입</h2>
+        </div>
+        <form action="/signup" method="POST" class="form">
+          <div class="input-box">
+            <label for="user_id">ID</label>
+            <input type="text" id="user_id" name="user_id" placeholder="아이디" />
+            <button id="duplication">중복 확인</button>
+          </div>
+          <div class="input-box">
+            <label for="user_name">이름(닉네임)</label>
+            <input
+              type="text"
+              id="user_name"
+              name="user_nickname"
+              placeholder="사용하실 닉네임을 입력해주세요" />
+          </div>
+          <div class="input-box">
+            <label for="user_pwd1">비밀번호 입력</label>
+            <input
+              type="password"
+              id="user_pwd1"
+              name="user_password"
+              placeholder="비밀번호를 입력해주세요" />
+          </div>
+          <div class="input-box">
+            <label for="user_pwd2">비밀번호 확인</label>
+            <input type="password" id="user_pwd2" placeholder="비밀번호를 다시한번 입력해주세요" />
+          </div>
+          <button type="submit">회원가입</button>
+        </form>
+        <a href="/login" class="login">이미 회원이시라면 ?!</a>
       </div>
-      <form action="/signup" method="POST">
-        <div>
-          <label for="user_id">ID</label>
-          <input type="text" id="user_id" name="user_id" placeholder="아이디" />
-          <button id="duplication">중복 확인</button>
-        </div>
-        <div>
-          <label for="user_name">이름(닉네임)</label>
-          <input
-            type="text"
-            id="user_name"
-            name="user_nickname"
-            placeholder="사용하실 닉네임을 입력해주세요" />
-        </div>
-        <div>
-          <label for="user_pwd1">비밀번호 입력</label>
-          <input
-            type="password"
-            id="user_pwd1"
-            name="user_password"
-            placeholder="비밀번호를 입력해주세요" />
-        </div>
-        <div>
-          <label for="user_pwd2">비밀번호 확인</label>
-          <input type="password" id="user_pwd2" placeholder="비밀번호를 다시한번 입력해주세요" />
-        </div>
-        <button type="submit">회원가입</button>
-      </form>
-      <a href="/login" class="login">이미 회원이시라면 ?!</a>
     </div>
   </body>
 </html>
