--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
         <img src="/static/tourlook_logo.svg" alt="투어룩 로고" />
         <h2>회원가입</h2>
       </div>
-      <form action="/signup" method="POST">
+      <form action="/signup" method="POST" class="form">
         <div class="input-box">
           <label for="user_id">ID</label>
           <input type="text" id="user_id" name="user_id" placeholder="아이디" />
@@ -36,7 +36,7 @@
             name="user_password"
             placeholder="비밀번호를 입력해주세요" />
         </div class="input-box">
-        <div>
+        <div class="input-box">
           <label for="user_pwd2">비밀번호 확인</label>
           <input type="password" id="user_pwd2" placeholder="비밀번호를 다시한번 입력해주세요" />
         </div>
