--- a/static/login.css
+++ b/static/login.css
@@ -1,80 +1,86 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam:wght@300;400;500;600;700&display=swap');
-* {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-}
-body {
-    font-family: 'Noto Sans Malayalam', sans-serif;
-    color: #222222;
-    height: 9999px;
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Malayalam:wght@300;400;500;600;700&display=swap");
+.main-container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .inner {
-    width: 800px;
-    height: 800px;
-    margin: 0 auto;
-    /* border: 1px solid red; */
-    padding-top: 150px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.row {
-    display: flex;
+.flex-box {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
 }
+
 h2 {
-    border: 1px solid #000;
-    text-align: center;
-    font-weight: 700;
-    font-size: 70px;
-    color: #0D99FF;
+  text-align: center;
+  font-weight: 700;
+  font-size: 70px;
+  color: #0d99ff;
 }
-
-/* Input field styles */
-input[type="text"],
-input[type="password"] {
-    width: 100%;
-    height: 40px;
-    padding: 10px;
-    margin: 15px 0;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+.main-container .form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-label {
-
+.main-container .form .input-box {
+  position: relative;
+  margin-bottom: 30px;
 }
-/* Button styles */
-button[type="submit"] {
-    background-color: #0D99FF;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    width: 800px;
-    height: 80px;
-    font-size: 20px;
-    margin-top: 50px;
+.main-container .form .input-box label {
+  display: inline-block;
+  margin-bottom: 5px;
+  font-weight: 600;
 }
-
-button[type="submit"]:hover {
-    background-color: #064674;
+.main-container .form .input-box input {
+  display: block;
+  width: 600px;
+  height: 50px;
+  border-radius: 10px;
+  border: solid 2px #0d99ff;
+  padding-left: 10px;
+  line-height: 50px;
+  font-size: 24px;
+  box-sizing: border-box;
+}
+.main-container .form .input-box input::placeholder {
+  font-size: 24px;
+  color: #ccc;
+}
+.main-container .form > button {
+  width: 600px;
+  height: 50px;
+  border-radius: 10px;
+  background-color: #0d99ff;
+  color: #fff;
+  border: none;
+  font-size: 24px;
 }
 
 a {
-    text-decoration: none;
-    color: #007bff;
+  text-decoration: none;
+  color: #007bff;
 }
 
 a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 /* join*/
 .join {
-    text-align: center;
+  text-align: center;
 }
 .join p {
-    margin-top: 80px;
+  margin-top: 80px;
 }
 a {
-    color: #0D99FF;
+  color: #0d99ff;
 }
