--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
         <img src="/static/tourlook_logo.svg" alt="투어룩 로고" />
         <h2>회원가입</h2>
       </div>
-      <form action="/signup" method="POST">
+      <form action="/signup" method="POST" id="signUpForm">
         <div>
           <label for="user_id">ID</label>
           <input type="text" id="user_id" name="user_id" placeholder="아이디" />
@@ -40,7 +40,7 @@
           <label for="user_pwd2">비밀번호 확인</label>
           <input type="password" id="user_pwd2" placeholder="비밀번호를 다시한번 입력해주세요" />
         </div>
-        <button type="submit">회원가입</button>
+        <button type="button" id="signUpBtn">회원가입</button>
       </form>
       <a href="/login" class="login">이미 회원이시라면 ?!</a>
     </div>
