--- a/templates/index.html
+++ b/templates/index.html
@@ -4,49 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tourlook</title>
-    <link rel="stylesheet" href="reset.css" />
-
-    <style>
-      .container {
-        display: flex;
-        flex-wrap: wrap;
-      }
-
-      .card {
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        overflow: hidden;
-        margin-right: 20px;
-        width: 300px; /* 카드의 폭을 조절할 수 있습니다. */
-        margin-bottom: 20px;
-      }
-
-      .thumbnail {
-        width: 100%;
-        height: auto;
-      }
-
-      .card-content {
-        padding: 15px;
-      }
-
-      h2 {
-        margin-top: 0;
-      }
-
-      p {
-        margin: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="../static/reset.css" />
+    <link rel="stylesheet" href="../static/main.css" />
   </head>
   <body>
     <header>
       <div>
-        {%if session['user_id']%}
-          {{session['user_id']}} 님, 환영합니다.
+        {%if session['user_id']%} {{session['user_id']}} 님, 환영합니다.
+        <a href="/logout">로그아웃</a>
         {%endif%}
       </div>
-      
+
       <h1>
         <img src="/" alt="투어룩 로고" />
       </h1>
@@ -54,10 +22,7 @@
       <a href="/signup">회원가입</a>
     </header>
 
-    <br><br>
-
     <main>
-      
       <!-- 검색창 대신 radio 버튼으로 원하는 곳 구현 -->
       <div>
         <form action="/">
@@ -81,25 +46,22 @@
         </form>
       </div>
 
-      <br><br>
-
       <!--  메인 리스트 리스트 ffor돌려서 받아오기 -->
       <!-- 카드 형식의 리스트 아이템 예제 -->
 
       <div class="container">
         {% for post in post_list %}
         <div class="card">
-          <img src="이미지_경로_1.jpg" alt="이미지 1" class="thumbnail">
+          <img src="이미지_경로_1.jpg" alt="이미지 1" class="thumbnail" />
           <div class="card-content">
-              <h2>{{ post.post_title }}</h2>
-              <p>{{ post.post_content }}</p>
+            <h2>{{ post.post_title }}</h2>
+            <p>{{ post.post_content }}</p>
           </div>
         </div>
         {% endfor %}
       </div>
 
-    <!-- 추가 카드 아이템들을 여기에 계속 추가할 수 있습니다. -->
-
+      <!-- 추가 카드 아이템들을 여기에 계속 추가할 수 있습니다. -->
     </main>
   </body>
 </html>
