Feat: main페이지 / header 컴포넌트 구성

--- a/static/reset.css
+++ b/static/reset.css
@@ -132,3 +132,14 @@ button {
   cursor: pointer;
   border: none;
 }
+
+a {
+  color: initial;
+  text-decoration: none;
+  outline: none;
+}
+a:hover,
+a:active {
+  text-decoration: none;
+  color: inherit;
+}
