--- a/static/main.css
+++ b/static/main.css
@@ -1,30 +1,98 @@
-.container {
+.main-container {
+  width: 100%;
+}
+.flex-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 50px;
+  margin-top: 100px;
+}
+.main-search-form {
+  width: fit-content;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border: solid 3px #0d99ff;
+  border-radius: 25px;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+.main-search-form select {
+  width: 500px;
+  height: 100%;
+  border-radius: 10px;
+  padding-left: 100px;
+  border: none;
+}
+.main-search-form select:focus {
+  outline: none;
+}
+
+.main-search-form label {
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+.main-search-form input {
+  width: 100px;
+  height: 100%;
+  border: none;
+  background-color: #0d99ff;
+  color: #fff;
+}
+.main-search-form input:hover {
+  cursor: pointer;
+}
+
+.card-container {
   display: flex;
   flex-wrap: wrap;
+  gap: 20px;
+  row-gap: 20px;
+  margin-top: 30px;
 }
-
-.card {
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  overflow: hidden;
-  margin-right: 20px;
+.card-container .card-box {
   width: 300px; /* 카드의 폭을 조절할 수 있습니다. */
-  margin-bottom: 20px;
+  overflow: hidden;
+  border-radius: 10px;
+  box-sizing: border-box;
+  border: 2px solid #333;
+}
+.card-container .card-box:hover {
+  background-color: #fbfbfb;
+  border-color: #0d99ff;
+}
+.card-container .img-box {
+  width: 100%;
+  overflow: hidden;
+  height: 50px;
+}
+.card-container .img-box .thumbnail {
+  display: inline-block;
+  width: 100%;
 }
 
-.thumbnail {
+.card-container .card {
   width: 100%;
-  height: auto;
+  padding: 5px;
+  box-sizing: border-box;
 }
 
 .card-content {
   padding: 15px;
 }
 
-h2 {
-  margin-top: 0;
+.card-content h2 {
+  font-size: 24px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-
-p {
-  margin: 0;
+.card-content p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
