--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,40 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>게시글 상세보기</title>
     <link rel="stylesheet" href="../static/reset.css" />
+    <link rel="stylesheet" href="../static/main.css" />
   </head>
   <body>
-    <h1>게시글 상세보기 페이지</h1>
-    <div class="detail-container">
-      <h2 class="detail-title"></h2>
-      <p class="detail-local">#서울/경기</p>
-      <p class="detail-user">{{ data.post_title }}</p>
-      <p class="detail-main">{{ data.post_content }}</p>
-    </div>
+    <div class="main-container">
+      <h1>게시글 상세보기 페이지</h1>
+      <div class="detail-container">
+        <h2 class="detail-title"></h2>
+        <p class="detail-local">#서울/경기</p>
+        <p class="detail-user">{{ data.post_title }}</p>
+        <p class="detail-main">{{ data.post_content }}</p>
+      </div>
+      <form action="/comment" method="POST">
+        <input type="hidden" name="post_pk" value="1" />
+        <!-- display: flex -->
+        <label for="comment">댓글:</label>
+        <textarea
+          id="comment"
+          name="comment_content"
+          rows="2"
+          cols="50"
+          placeholder="100자 이내로 작성해주세요!"></textarea>
 
-    <br><br><br><br><br><br><br>
+        <input type="submit" value="등록" />
+      </form>
 
-    <form action="/comment" method="POST">
-      <input type ="hidden" name="post_pk" value="1">
-      <!-- display: flex -->
-      <label for="comment">댓글:</label>
-      <textarea
-        id="comment"
-        name="comment_content"
-        rows="2"
-        cols="50"
-        placeholder="100자 이내로 작성해주세요!"></textarea>
-
-      <input type="submit" value="등록" />
-    </form>
-
-    <div class="comment-container">
-      <!-- ffor돌리기 -->
-      {% for comment in data.comments %}
+      <div class="comment-container">
+        <!-- ffor돌리기 -->
+        {% for comment in data.comments %}
         <div class="comment-card">
           <p class="comment-user">{{ comment.user_nickname }}</p>
           <p class="comment-main">{{ comment.comment_content }}</p>
         </div>
-      {% endfor %}
+        {% endfor %}
+      </div>
     </div>
   </body>
 </html>
