fix: 메인 상세보기 링크 수정

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
           <div class="card-container">
             {% for post in post_list %}
             <div class="card-box">
-              <a href="#" class="card">
+              <a href="/post/{{ post.post_pk }}" class="card">
                 <div class="img-box">
                   <img src="이미지_경로_1.jpg" alt="이미지 1" class="thumbnail" />
                 </div>
