fix: 비로그인 유저 댓글 등록시 로그인 페이지로 리다이렉트

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <h1>
-        <img src="../static/tourlook_logo.svg" alt="" />
+        <a href="/"><img src="../static/tourlook_logo.svg" alt="" /></a>
       </h1>
       <div class="header-right">
         
