--- a/static/detail.css
+++ b/static/detail.css
@@ -4,6 +4,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding: 100px 0;
 }
 .main-container > h2 {
   font-size: 32px;
@@ -93,6 +94,7 @@
   padding: 14px;
   gap: 20px;
   box-sizing: border-box;
+  margin-top: 50px;
 }
 .comment-container .comment-card :first-child {
   max-width: 500px;
