--- a/static/header.css
+++ b/static/header.css
@@ -4,6 +4,8 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: fixed;
+  top: 0;
 }
 header img {
   height: 50px;
