--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -18,7 +18,7 @@
         <p class="detail-main">{{ data.post_content }}</p>
       </div>
       <form action="/comment" method="POST" class="comment-form">
-        <input type="hidden" name="post_pk" value="1" />
+        <input type="hidden" name="post_pk" value="{{ data.post_pk }}" />
         <!-- display: flex -->
         <label for="comment">댓글 등록</label>
         <input
