Feat: postSave.html기초 구상

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
       <!-- 검색창 대신 radio 버튼으로 원하는 곳 구현 -->
       <div class="main-container">
         {% include './header.html' %}
+        <div class="banner"></div>
         <div class="flex-container">
           <form action="/" class="main-search-form">
             <label for="lang">여행 지역 검색</label>
