--- a/templates/post_save.html
+++ b/templates/post_save.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>게시글 등록</title>
+    <link rel="stylesheet" href="../static/reset.css" />
+    <link rel="stylesheet" href="../static/postSave.css" />
   </head>
   <body>
     <div class="save-container">
+      <h2>게시글 작성</h2>
       <form action="/post" method="post">
         <div class="save-location">
           <label for="save-location">여행 도시</label>
