--- a/static/main.css
+++ b/static/main.css
@@ -2,6 +2,14 @@
   width: 100%;
   padding: 100px 0;
 }
+.banner {
+  width: 100vw;
+  height: 300px;
+  background-image: url("/static/banner_img.jpg");
+  background-repeat: no-repeat;
+  background-attachment: center;
+  background-size: cover;
+}
 .flex-container {
   display: flex;
   justify-content: center;
