이미지 업로드, 조회 HTML 태그 추가, index.html 썸네일 이미지 태그 추가

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -13,6 +13,7 @@
 
       <h2>게시글 상세보기 페이지</h2>
       <div class="detail-container">
+        <img src="{{ data.img_url }}" alt="">
         <h3 class="detail-title">{{ data.post_title }}</h3>
         <p class="detail-local">추천 지역: {{ data.post_local_cate }}</p>
         <p class="detail-main">{{ data.post_content }}</p>
