--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
             <div class="card-box">
               <a href="/post/{{ post.post_pk }}" class="card">
                 <div class="img-box">
-                  <img src="이미지_경로_1.jpg" alt="이미지 1" class="thumbnail" />
+                  <img src="/static/post-images/{{ post.post_pk}}" alt="이미지 1" class="thumbnail" />
                 </div>
                 <div class="card-content">
                   <h2>{{ post.post_title }}</h2>
