--- a/templates/header.html
+++ b/templates/header.html
@@ -12,13 +12,13 @@
       <h1>
         <a href="/"><img src="../static/tourlook_logo.svg" alt="" /></a>
       </h1>
+      <a href="/post" class="post-btn">글쓰러 가기!</a>
       <div class="header-right">
-        
         {%if session['user_id']%} {{session['user_id']}} 님, 환영합니다.
-          <a href="/logout">로그아웃</a>
+        <a href="/logout">로그아웃</a>
         {% else %}
-          <a href="/login">로그인</a>
-          <a href="/signup">회원가입</a>
+        <a href="/login">로그인</a>
+        <a href="/signup">회원가입</a>
         {% endif %}
       </div>
     </header>
