--- a/static/main.css
+++ b/static/main.css
@@ -51,15 +51,15 @@
 
 .card-container {
   display: flex;
-  padding: 0 200px;
+  justify-content: space-around;
+  max-width: 1000px;
   box-sizing: border-box;
   flex-wrap: wrap;
-  gap: 20px;
   row-gap: 20px;
   margin-top: 30px;
 }
 .card-container .card-box {
-  width: 300px; /* 카드의 폭을 조절할 수 있습니다. */
+  width: 30%; /* 카드의 폭을 조절할 수 있습니다. */
   overflow: hidden;
   border-radius: 10px;
   box-sizing: border-box;
@@ -86,6 +86,8 @@
 }
 
 .card-content {
+  height: 70px;
+  box-sizing: border-box;
   padding: 15px;
 }
 
