비로그인으로 좋아요버튼 클릭시 로그인페이지로 이동

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -60,11 +60,13 @@
       })
         .then((response) => response.json())
         .then((data) => {
-          if (data.exists == 'no') {
+          if (data.exists === 'no login') {
+            window.location.href = '/login';
+          } else if (data.exists === 'no') {
             alert('좋아요 저장')
           } else {
             alert('좋아요 취소')
-          }
+          } 
         })
         .catch((error) => console.log(error));
     };
